# blog

./: .gitignore  .mcp.json  404.html  CLAUDE.md  LICENSE  README.md  articles_with_dates.json  baiduPush.sh  build.sh  deploy.bat  deploy.sh  index.html  package.json  pull-build.sh
.claude/: settings.local.json
.claude/commands/: catalogue-arrange.md  expand.md  improve.md  proofread.md  swrite.md
.claude/scripts/: cc-provider-manage-产品设计.md  cc-provider-manage.cmd  cc-provider-manager-gui-系统架构设计.md
.github/workflows/: ci.yml  ci.yml.latest
.qoder/: settings.json
.qoder/rules/: global.md
about/: index.html
archives/: index.html
assets/css/: 0.styles.8b6f9cb2.css
assets/js/: 16.7ad9f978.js  17.c47d4b76.js  18.fbaa3fcc.js  (+27 more)
astro/: astro.config.mjs  package.json  tailwind.config.ts  tsconfig.json
blog-ops/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
categories/: index.html
docs/: index.md
english-corner/: index.html
nextjs/: package.json  tailwind.config.ts
nginx/: nginx.conf
operation/: index.html
project/claude-code-provider-manager-gui/src-tauri/: Cargo.toml  tauri.conf.json
project/claude-code-provider-manager-gui/src-tauri/src/: lib.rs  main.rs
project/claude-code-provider-manager-gui/src-tauri/src/commands/: config.rs  environment.rs  launcher.rs  mod.rs  provider.rs  validation.rs
project/claude-code-provider-manager-gui/src-tauri/src/errors/: mod.rs
project/claude-code-provider-manager-gui/src-tauri/src/models/: config.rs  mod.rs  provider.rs  settings.rs
project/claude-code-provider-manager-gui/src-tauri/src/services/: config_service.rs  env_service.rs  mod.rs  security_service.rs  system_service.rs
project/claude-code-provider-manager-gui/src-tauri/src/utils/: crypto.rs  filesystem.rs  mod.rs  validation.rs
server/: index.html
tags/: index.html
utils/: baiduPush.mjs  ftpSync.mjs
vuepress/: .gitignore  CLAUDE.md  build.sh  package.json
web/: index.html
(+687 files in other folders)
