[package]
name = "claude-code-provider-manager-gui"
version = "0.1.0"
description = "Claude Code Provider Manager GUI - 跨平台的 Claude API 提供商管理桌面应用"
authors = ["Claude Code Provider Manager Team"]
license = "MIT"
repository = "https://github.com/claude-code/provider-manager-gui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "api-all",
  "devtools",
  "shell-open",
  "system-tray",
  "updater",
  "window-all",
  "notification-all",
  "fs-all",
  "path-all",
  "os-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.4"
dirs = "5.0"
base64 = "0.21"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
rand = "0.8"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"

# 跨平台依赖
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dpapi", "wincrypt", "winreg"] }
windows = { version = "0.52", features = ["Win32_Security_Cryptography", "Win32_System_Registry"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "3.0"
keyring = "2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]